# cryptoLp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
SCI/: CMakeLists.txt
SCI/cmake/: SCIConfig.cmake
SCI/networks/: CMakeLists.txt  main_c2d.cpp
SCI/src/BuildingBlocks/: NOTES.md  aux-protocols.cpp  aux-protocols.h
SCI/src/Math/: math-functions.cpp  math-functions.h
SCI/src/Millionaire/: millionaire.h  millionaire_ext.h
SCI/src/OT/: ot_pack.h  split-iknp.h
SCI/src/utils/: utils.hpp
tests/: CMakeLists.txt  test_ring_bench_abs.cpp  test_ring_bench_abs_mux.cpp  test_ring_bench_adder.cpp  test_ring_bench_adder_vs_conv.cpp  test_ring_bench_argmin.cpp  test_ring_bench_cd.cpp  test_ring_bench_conv.cpp  test_ring_bench_diff.cpp  test_ring_bench_ed.cpp  test_ring_bench_elemwise_prod.cpp  test_ring_bench_kmedians.cpp  test_ring_bench_max.cpp  test_ring_bench_max_naive_vs_opti.cpp  test_ring_bench_md.cpp  test_ring_bench_median.cpp  test_ring_bench_mill.cpp  test_ring_bench_msb.cpp  test_ring_bench_mux.cpp  test_ring_bench_sort.cpp
