macro (add_test_OT _name)
	add_executable(${_name}-OT "test_ring_${_name}.cpp")
    target_link_libraries(${_name}-OT SCI-OT) 
endmacro()

add_test_OT(bench_elemwise_prod)
add_test_OT(bench_abs_mux)
add_test_OT(bench_abs)
add_test_OT(bench_md)
add_test_OT(bench_msb)
add_test_OT(bench_mill)
add_test_OT(bench_diff)
add_test_OT(bench_ed)
add_test_OT(bench_cd)
add_test_OT(bench_conv)
add_test_OT(bench_adder)
add_test_OT(bench_argmin)
add_test_OT(bench_sort)
add_test_OT(bench_mux)
add_test_OT(bench_median)
add_test_OT(bench_kmedians)
add_test_OT(bench_max)
add_test_OT(bench_max_naive_vs_opti)
add_test_OT(bench_adder_vs_conv)
